completed cru(d). manque la foreign key plan cadre type a default (spécifique) dans la bd

--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/Info.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/Info.cshtml
@@ -22,7 +22,7 @@
 
             <hr />
             <h1>Modification</h1>
-            <a class="fancy-button" href='@Url.Action("Create", "PlanCadre", new {id = Model.PlanCadre})'><span class="glyphicon glyphicon-plus"><!----></span> Ajouter un plan cadre</a>
+            <a class="fancy-button" href='@Url.Action("Create", "PlanCadre", new {idProgramme = Model.idProgramme})'><span class="glyphicon glyphicon-plus"><!----></span> Ajouter un plan cadre</a>
             <a class="fancy-button rouge" onclick="location.href='@Url.Action("Index", "Programme")'">Retour</a>
 
         </div>
