--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/recherche/_afficherRecherche.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/recherche/_afficherRecherche.cshtml
@@ -4,6 +4,11 @@
 @{
     ViewBag.Title = "afficherRech";
 }
+<style>
+    p{
+        font-size:20px;
+    }
+</style>
 
 
 <div id="info-display" class="container-fluid">
