--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Content/extend.css
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Content/extend.css
@@ -1,5 +1,5 @@
 ﻿body {
-    min-height: calc(100vh - 50px);
+    min-height: calc(100vh - 55px);
     font-family: Calibri, Sans-Serif;
     font-size: 175%;
     background-image: url(../Content/Images/watermark.png);
@@ -20,6 +20,7 @@ li {
 }
 
 hr {
+    margin: 10px 0;
     border: none;
     border-bottom: 1px solid #B5B5B5;
 }
@@ -56,7 +57,7 @@ input, button {
 .form-control:focus {
     outline: 0;
     border: none;
-    border-bottom: 2px solid gold;
+    border-bottom: 2px solid #f9a01b;
     box-shadow: initial;
 }
 
@@ -87,7 +88,7 @@ textarea {
     border: 2px solid;
     border-radius: 0;
     text-align: center;
-    color: #083a7c;
+    color: #0063b1;
     background-color: transparent;
     font-size: 1.2em;
     cursor: pointer;
@@ -107,8 +108,8 @@ textarea {
 }
 
 .fancy-button:hover {
-    border-color: #083a7c;
-    background-color: #083a7c;
+    border-color: #0063b1;
+    background-color: #0063b1;
     color: #ffffff;
 }
 
@@ -143,16 +144,14 @@ input[type="file"] {
 }
 
 .form-box header {
-    margin: -40px;
-    margin-bottom: 0;
-    padding: 20px 40px;
-    color: #fff;
-    background-color: #0078d7;
+    display: inline-block;
+    margin-bottom: 20px;
+    border-bottom: 2px solid #0078d7;
 }
 
 .field-box {
     margin: 20px 0;
-    padding: 10px 20px;
+    padding: 20px;
     background-color: #f2f2f2;
 }
 
@@ -194,24 +193,24 @@ mark {
     padding: 0;
 }
 
-.child-container {
+.child-field-container {
     margin: 5px 15px;
 }
 
-.child {
-    margin: 5px 0;
-    padding: 10px 15px;
-    width: 300px;
-    background-color: #929ab1;
+.child-field {
+    margin: 10px 0;
+    padding: 7px;
+    width: 100%;
+    background-color: #f9a01b;
     color: #ffffff;
 }
 
-.child p {
+.child-field p {
     float: left;
     margin: 0;
 }
 
-.child .glyphicon {
+.child-field .glyphicon {
     position: relative;
     top: 3px;
     float: right;
